# pyCosign

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
documentation/: design_specification.md  signing-attesting-verifying.md
documentation/puml/: component_pycosign_attester.puml  component_pycosign_signer.puml  component_pycosign_verifier.puml  seq_attester_a1.puml  seq_attester_a2.puml  seq_signer_s1.puml  seq_signer_s2.puml  seq_verifier_v1.puml  seq_verifier_v2.puml  use_case_attester.puml  use_case_signer.puml  use_case_verifier.puml
