[project]
name = "pycosign"
version = "0.0.0"
description = "Python Wrapper for Sigstor Cosign"
authors = [{ name = "interwebshack", email = "22042209+interwebshack@users.noreply.github.com" }]
license = "MIT License"
readme = "README.md"
packages = [{ include = "pycosign" }]
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"
pylint = "^3.3.7"
pytest-cov = "^6.1.1"
vulture = "^2.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pycosign = "pycosign.cli:main"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
